5.7.3
-----
1. Re-add fix to not use custom select library for multi-select lists.

5.7.2
-----
 1. Re-add custom select library, but disable for 'Custom Skip'.
 2. Handle case where there is an 'Other' group at start of release.
 3. Don't use solid colour for 'Save Settings' button as some colours (if set
    from cover) can cause poor contrast.
 4. Prevent flash of blue when activating a select menu in settings pages on
    touch devices.
 5. Fix clipping of covers in grid view.
 6. Fix adding, and removing, tracks from favourites via now-playing.
 7. Only split into groups if all groups are single blocks.
 8. Use LMS 9.0.1's contiguous_groups flag to only show multi-group icon in
    album covers if groups of album are in contiguous blocks.
 9. Use same icon to show library refresh in progress in 'Information' dialog
    as per in toolbar.
10. Update current player status if click on it's name in navigation drawer.
11. Fix playing playlists, artists, and albums, from favourites.
12. Fix 'Go to composer', etc., sometimes not showing in now-playing menu for
    LMS9.0.1+
13. If have multiple artists, composers, etc. then prompt for which to go to
    when using now-playing menu.
14. Make popup messages slightly transparent and pass through pointer events.

5.7.1
-----
 1. Change 'Show composer' option from boolean to; 'No', 'Classical genres',
    'All genres'.
 2. Allow now-playing portrait image to be larger.
 3. Fix URL parsing - thanks to Michael Herger.
 4. Fix sorting of albums list if it contains a Works section.
 5. Fix Works albums list subtitle pluralisation.
 6. Fix sync and sleep dialogs not being scrollable on touch devices.
 7. Fix sort-descending toggle - thanks to Darrell.
 8. In desktop layout, show expanded now-playing when clicking bar image even if
    MAI showing.
 9. Fix reloading of bliss mix if reload action activated following 'Create
    mix'.
10. Remove use of custom select library, its breaking too many things.