@@ -251,7 +251,7 @@ var lmsNowPlaying = Vue.component("lms-now-playing", {
     <div class="np-details-landscape" v-bind:class="{'np-details-landscape-wide': landscape && wide>1}">
 
      <div class="np-landscape-track-info hide-scrollbar fade-both">
-      <div>
+      <div id="np-track-info">
        <p class="np-title-landscape np-title" v-if="playerStatus.current.title">{{title}}</p>
        <p class="np-text-landscape subtext" v-if="artistAndComposerLine" v-html="artistAndComposerLine"></p>
        <p class="np-text-landscape subtext" v-if="albumLine" v-html="albumLine"></p>
@@ -324,7 +324,7 @@ var lmsNowPlaying = Vue.component("lms-now-playing", {
      </table>
     </div>
     <div class="np-portrait-track-info hide-scrollbar fade-both">
-     <div>
+     <div id="np-track-info">
       <p class="np-title" v-if="playerStatus.current.title">{{title}}</p>
       <p class="np-text subtext" v-if="artistAndComposerLine" v-html="artistAndComposerLine"></p>
       <p class="np-text subtext" v-if="albumLine" v-html="albumLine"></p>
@@ -523,7 +523,10 @@ var lmsNowPlaying = Vue.component("lms-now-playing", {
                 return;
             }
             if ((this.largeView || !this.$store.state.desktopLayout) && !this.info.show) {
-                bus.$emit('info');
+                let elem = document.getElementById("np-track-info");
+                if (undefined==elem || (elem.scrollHeight-8)<=elem.clientHeight) {
+                    bus.$emit('info');
+                }
             }
         }.bind(this));
         bus.$on('swipeDown', function() {
