@@ -1,6 +1,8 @@
 5.7.3
 -----
 1. Re-add fix to not use custom select library for multi-select lists.
+2. Try not to switch to MAI view when swiping on track info that needs to be
+   scrolled.
 
 5.7.2
 -----
